--- a/builds/fabric8-che/assembly/pom.xml
+++ b/builds/fabric8-che/assembly/pom.xml
@@ -23,6 +23,7 @@
         <module>assembly-ide-war</module>
         <module>assembly-wsmaster-war</module>
         <module>assembly-main</module>
+        <module>user-auth-valve</module>
     </modules>
     <build>
         <pluginManagement>
